Revision history for DBIx::Class

        - added AutoInflate::DateTime component
        - refactor debugging to allow for profiling using Storage::Statistics
        - removed Data::UUID from deps, made other optionals required
        - modified SQLT parser to skip dupe table names
        - added remove_column(s) to ResultSource/ResultSourceProxy
        - added add_column alias to ResultSourceProxy
        - added source_name to ResultSource
        - load_classes now uses source_name and sets it if necessary
        - add update_or_create_related to Relationship::Base
        - add find_or_new to ResultSet/ResultSetProxy and find_or_new_related
          to Relationship::Base
        - add accessors for unique constraint names and coulums to
          ResultSource/ResultSourceProxy
        - rework ResultSet::find() to search unique constraints
        - CDBICompat: modify retrieve to fix column casing when ColumnCase is
          loaded
        - CDBICompat: override find_or_create to fix column casing when
          ColumnCase is loaded

0.06003
        - make find_or_create_related check defined() instead of truth
        - don't unnecessarily fetch rels for cascade_update
        - don't set_columns explicitly in update_or_create; instead use
          update($hashref) so InflateColumn works
        - fix for has_many prefetch with 0 related rows
        - make limit error if rows => 0
        - added memory cycle tests and a long-needed weaken call

0.06002 2006-04-20 00:42:41
        - fix set_from_related to accept undef
        - fix to Dumper-induced hash iteration bug
        - fix to copy() with non-composed resultsource
        - fix to ->search without args to clone rs but maintain cache
        - grab $self->dbh once per function in Storage::DBI
        - nuke ResultSource caching of ->resultset for consistency reasons
        - fix for -and conditions when updating or deleting on a ResultSet

0.06001 2006-04-08 21:48:43