@@ -1,5 +1,6 @@
 Revision history for DBIx::Class
 
+        - add +select and +as attributes to ResultSet
         - added AutoInflate::DateTime component
         - refactor debugging to allow for profiling using Storage::Statistics
         - removed Data::UUID from deps, made other optionals required
